# uav_find_again

./: .gitignore  .gitmodules  README.md  requirements.txt  run_mock_demo.py
docs/: gazebo_multi_uav_sim_design.md  test_pipeline.md
docs/plans/: aerial_target_industrial_scene_plan.md  demo_scene_and_sensor_recording_plan.md  sitl_physics_integration_plan.md
docs/ppt/: multi_uav_reacquisition_ppt_prompt.md
ros2_ws/src/multi_uav_sim_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/multi_uav_sim_bringup/config/: mock_demo.yaml  sitl_demo.yaml
ros2_ws/src/multi_uav_sim_bringup/launch/: gazebo_camera_record.launch.py  gazebo_mock_demo.launch.py  mock_demo.launch.py  px4_sitl_demo.launch.py
ros2_ws/src/multi_uav_sim_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/multi_uav_sim_msgs/msg/: SimEvent.msg  (+4 more)
ros2_ws/src/multi_uav_sim_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/multi_uav_sim_nodes/multi_uav_sim_nodes/: __init__.py  coop_tracker.py  gazebo_pose_sync.py  geometry.py  image_video_recorder.py  ros_utils.py  scenario.py  sim_recorder.py  sitl_offboard_adapter.py  target_manager.py  uav_control.py  vision_mock.py
ros2_ws/src/multi_uav_sim_worlds/: CMakeLists.txt  package.xml
ros2_ws/src/multi_uav_sim_worlds/models/occlusion_wall/: model.config  model.sdf
ros2_ws/src/multi_uav_sim_worlds/models/simple_uav/: model.config  model.sdf
ros2_ws/src/multi_uav_sim_worlds/models/target_marker/: model.config  model.sdf
ros2_ws/src/multi_uav_sim_worlds/worlds/: multi_uav_reacquire.sdf  multi_uav_reacquire_sitl.sdf
sim/: __init__.py  mock_demo.py
