<?xml version="1.0"?>
<package format="3">
  <name>multi_uav_sim_nodes</name>
  <version>0.1.0</version>
  <description>ROS2 Python nodes for the multi-UAV cooperative reacquisition demo.</description>
  <maintainer email="todo@example.com">find_object_again</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>multi_uav_sim_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
